data/derived/fa15/progs/unify/prog1622.ml.out
Characters 168-169:
  let seen' = seen::h in
                    ^
Error: This expression has type 'a but an expression was expected of type
         'a list list
       The type variable 'a occurs inside 'a list list
